--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-round-corner",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Round the corner of two line segments with an arc.",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,9 @@
     "vectors",
     "angles",
     "geometry",
-    "canvas2d"
+    "canvas2d",
+    "lines",
+    "svg"
   ],
   "author": "Greg Tatum",
   "license": "MIT",
