--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "npm-round-corner",
-  "version": "0.0.0",
+  "name": "round-corner",
+  "version": "1.0.0",
   "description": "Round the corner of two line segments with an arc.",
   "main": "index.js",
   "scripts": {
